# renyimen

./: .env.example  .gitignore  README.md  amap_service.py  baidu_service.py  claude_desktop_config.json  gps_service.py  index.html  main.py  mcp_navigation_server.py  navigation_service.py  package-lock.json  package.json  pyproject.toml  voice_recognition_service.py
amap-mcp/: .env.example  README.md  package.json
amap-mcp/src/: index.ts
backend/: .env.example  README.md  package.json
backend/src/: index.ts
doc/: architecture.md  design.md  technology-selection.md
docs/: voice-input-solutions.md
electron/: main.js  preload.js
frontend/: .env.example  README.md  index.html  package.json
frontend/src/: App.vue
src/: App.vue
