[project]
name = "renyimen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.19.0",
    "pyside6>=6.9.1",
    "requests>=2.32.5",
    "speechrecognition>=3.10.0",
    "pyaudio>=0.2.13",
    "websockets>=10.0",
    "qasync>=0.28.0",
    "websocket-client>=1.9.0",
]
